Finished practice for html and js

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+ <!-- https://natalietesam.github.io/wdd131/ -->
 <!DOCTYPE html> 
 <html>
     <header>
@@ -10,8 +11,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
     </header>
     <body>
         <h1>Hello, World!</h1>
+        <p> If you have <span id="myApples"></span> apples,
+            and your friend has <span id="friendApples"></span>.
+            Then together you have <span id="total"></span> apples!
+        </p>
     </body>   
 </html>
