--- a/mission/index.html
+++ b/mission/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Natalie Tesam">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <link rel="stylesheet" href="mission.css">
+        <link rel="stylesheet" href="styles/mission.css">
         <script></script>
     </head>
     <body>
