--- a/mission/index.html
+++ b/mission/index.html
@@ -14,6 +14,10 @@
     </head>
     <body>
             <div class="content">
+                <select name="mode">
+                    <option value="light">Light</option>
+                    <option value="dark">Dark</option>
+                </select>
             <header class="title">
                 <h1>Mission Statement</h1>
                 <h2>Brigham Young University-Idaho</h2>
@@ -34,8 +38,9 @@
                 </ol>
             </main>
             <footer>
-                <img src="byui-logo_blue.webp" alt="BYUI Logo" class="logo">
+                <img src="byui-logo_blue.webp" alt="BYUI Logo" id="logo">
             </footer>
         </div>
+        <script src="scripts/mission.js"></script>
     </body>   
 </html>
