Finished week 03 assignments.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
  <!-- https://natalietesam.github.io/wdd131/ -->
 <!DOCTYPE html> 
 <html>
-    <header>
-        <title>Natalie Tesam: WDD 131 portfolio</title>
+    <head>
+        <title>Natalie Tesam: WDD 131 Portfolio</title>
 
         <meta charset="UTF-8">
         <meta name="keywords" content="HTML, CSS, JavaScript">
@@ -11,13 +11,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link rel="stylesheet" href="style.css">
-        <script src="script.js" defer></script>
-    </header>
+        <script src="scripts/script.js" defer></script>
+    </head>
     <body>
-        <h1>Hello, World!</h1>
-        <p> If you have <span id="myApples"></span> apples,
-            and your friend has <span id="friendApples"></span>.
-            Then together you have <span id="total"></span> apples!
-        </p>
+        <header>
+            <h1>Natalie Tesam: WDD 131 Portfolio</h1>
+            <nav>
+                <ul>
+                    <li><a href="mission/index.html">Mission</a"></a></li>
+                    <li><a href="coolpics/index.html">Coolpics</a></a></li>
+                    <li><a href="#">Project 3</a></li>
+                    <li><a href="#">Project 4</a></li>
+                    <li><a href="#">Project 5</a></li>
+                </ul>
+            </nav>
+
+        </header>
+        <main>
+            <h1>Hello, World!</h1>
+            <p> If you have <span id="myApples"></span> apples,
+                and your friend has <span id="friendApples"></span>.
+                Then together you have <span id="total"></span> apples!
+            </p>
+        </main>
+        <footer>
+
+        </footer>
     </body>   
 </html>
