Finished CSS and HTML for Week 4

--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -12,11 +12,15 @@
     <link rel="stylesheet" href="styles/coolpics.css">
 </head>
 <body>
+    <div class="viewer">
+        <button class="close-viewer">X</button>
+        <img src="images/norris-full.jpeg" alt="alt description" class="viewer-image">
+    </div>
     <header>
         <h1>Cool Pics 📷</h1>
         <nav>
-            <button>Menu</button>
-            <ul>
+            <button class="menu-button">Menu</button>
+            <ul class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">People</a></li>
                 <li><a href="#">Places</a></li>
