--- a/crochet-corner/site-plan.html
+++ b/crochet-corner/site-plan.html
@@ -125,17 +125,18 @@
 
 			<h3>Home</h3>
 			<p>
-				[Any additional details about home that the wireframe does not make
-				clear]
+				When one of the patterns on the home page is clicked it will redirect
+				the user to the pattern on the patterns page.
 			</p>
-			<img src="#" alt="home page wireframe" />
+			<img src="images\crochetCornerHomePageWireframe.png" alt="home page wireframe" />
 
-			<h3>[Page 2]</h3>
+			<h3>Patterns</h3>
 			<p>
-				[Any additional details about page 2 that the wireframe does not make
-				clear]
+				When a pattern's grid is clicked, a modal will open with the whole 
+				pattern in it. The experience level dropdown menu will have 3 levels
+				and based on those it will show different patterns.
 			</p>
-			<img src="#" alt="page 2 wireframe" />
+			<img src="images\crochetCornerPatternPageWireframe.png" alt="page 2 wireframe" />
 		</main>
 	</body>
 </html>
