--- a/crochet-corner/site-plan.html
+++ b/crochet-corner/site-plan.html
@@ -114,15 +114,18 @@
 
 			<h2>Content</h2>
 			<h3>Home page</h3>
-			<p>[content, images, data for the home page]</p>
-			<h3>[Page 2]</h3>
-			<p>[content, images, data for the subpage]</p>
-			<h2>Wireframes</h2>
-			<p>
-				Create two wireframes for your site. One for each page and list them
-				here
+			<p>	Welcome Paragraph: Welcome whether you are an experienced crocheter or are looking to learn I have
+				patterns for all skill levels. If you have any questions or struggles feel free to contact
+				me!
 			</p>
-
+			<img src="images\candyCorn.jpg" alt="Candy Corn" />
+			<img src="images\chickens.jpg" alt="Candy Corn" />
+			<img src="images\sunflowerAndDaisy.jpg" alt="Candy Corn" />
+			
+			<h3>Patterns</h3>
+			<p>All Patterns, Beginner Patterns, Intermediate Patterns, Hard Patterns</p>
+			<h2>Wireframes</h2>
+	
 			<h3>Home</h3>
 			<p>
 				When one of the patterns on the home page is clicked it will redirect
