--- a/crochet-corner/site-plan.html
+++ b/crochet-corner/site-plan.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Site Plan</title>
-		<link type="text/css" rel="stylesheet" href="site-plan.css" />
+		<link type="text/css" rel="stylesheet" href="styles/site-plan.css" />
 	</head>
 
 	<body>
@@ -19,6 +19,12 @@
 			<!-- ------------------------Steps 2-3------------------------------ -->
 			<hr />
 			<h2>Overview</h2>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="patterns.html">Patterns</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
+				<li><a href="site-plan.html">Site Plan</a></li>
+			</ul>
 			<h3>Purpose</h3>
 			<p>A portfolio for my crochet creations. It will have a page for pictures of my creations, a page for free patterns other crocheters can use, and a contact page linked to my social media and etsy store..</p>
 			<!-- change this -->
