updated main to include welcome

--- a/crochet-corner/index.html
+++ b/crochet-corner/index.html
@@ -11,17 +11,26 @@
 <body>
     <div class="content">
         <header>
-            <img class="logo" alt="logo" src="images\crochet-corner-logo.png"
-        />
-        <ul class="navigation">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="patterns.html">Patterns</a></li>
-          <li><a href="contact.html">Contact Me</a></li>
-          <li><a href="site-plan.html">Site Plan</a></li>
-        </ul>
+            <img class="logo"  src="images\crochet-corner-logo.png" alt="logo"/>
+            <ul class="navigation">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="patterns.html">Patterns</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
+                <li><a href="site-plan.html">Site Plan</a></li>
+            </ul>
         </header>
         <main>
+            <div class="welcome-section">
+                <img class="banner" src="" alt="banner" >
+                <img class="welcome-image" src="" alt="">
+                <h2>Welcome</h2>
+                <p>Whether you are an experienced crocheter or are looking to learn, I have patterns for all skill levels. If you have any questions or struggles feel free to contact me!</p>
+            </div>
+            <div class="popular-patterns-section">
+                <h2>Popular Patterns</h2>
+                <p>Here are 3 of our all time favorite patterns.</p>
 
+            </div>
         </main>
         <footer>
 
