created script file

--- a/crochet-corner/index.html
+++ b/crochet-corner/index.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Natalie Tesam">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crochet Corner - Home</title>
+
+    <script src="scripts/script.js" defer></script>
 </head>
 <body>
     <div class="content">
@@ -29,7 +31,8 @@
             <div class="popular-patterns-section">
                 <h2>Popular Patterns</h2>
                 <p>Here are 3 of our all time favorite patterns.</p>
-
+                    <div id="data-output">
+                    </div>
             </div>
         </main>
         <footer>
