updated html files to match wireframes

--- a/crochet-corner/index.html
+++ b/crochet-corner/index.html
@@ -1,43 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="description" content="Amigurumi crochet patterns home page.">
-    <meta name="author" content="Natalie Tesam">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="description" content="Amigurumi crochet patterns home page." />
+    <meta name="author" content="Natalie Tesam" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crochet Corner - Home</title>
-
-    <script src="scripts/script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="content">
-        <header>
-            <img class="logo"  src="images\crochet-corner-logo.png" alt="logo"/>
-            <ul class="navigation">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="patterns.html">Patterns</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-                <li><a href="site-plan.html">Site Plan</a></li>
-            </ul>
-        </header>
-        <main>
-            <div class="welcome-section">
-                <img class="banner" src="" alt="banner" >
-                <img class="welcome-image" src="" alt="">
-                <h2>Welcome</h2>
-                <p>Whether you are an experienced crocheter or are looking to learn, I have patterns for all skill levels. If you have any questions or struggles feel free to contact me!</p>
-            </div>
-            <div class="popular-patterns-section">
-                <h2>Popular Patterns</h2>
-                <p>Here are 3 of our all time favorite patterns.</p>
-                    <div id="data-output">
-                    </div>
-            </div>
-        </main>
-        <footer>
-
-        </footer>
+      <header>
+        <img class="logo" src="images\crochet-corner-logo.png" alt="logo" />
+        <ul class="navigation">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="patterns.html">Patterns</a></li>
+          <li><a href="contact.html">Contact Me</a></li>
+          <li><a href="site-plan.html">Site Plan</a></li>
+        </ul>
+      </header>
+      <main>
+        <div id="welcome-section">
+          <img class="banner" src="images/placeholder.jpg" alt="banner" />
+          <img class="welcome-image" src="" alt="" />
+          <h2>Welcome</h2>
+          <p>
+            Whether you are an experienced crocheter or are looking to learn, I
+            have patterns for all skill levels. If you have any questions or
+            struggles feel free to contact me!
+          </p>
+        </div>
+        <div id="popular-patterns-section">
+          <h2>Popular Patterns</h2>
+          <p>Here are 3 of our all time favorite patterns.</p>
+          <div id="data-output"></div>
+        </div>
+        <div class="help-section">
+          <h2>Need Help?</h2>
+          <button>Contact Me</button>
+          <p>
+            If you have questions, issues, or problems with any patterns, reach
+            out! I will try to respond in a timely manner.
+          </p>
+        </div>
+      </main>
+      <footer>
+        <h3>Copyright 2024 - Crochet Corner - Crochet Patterns</h3>
+        <p>Natalie Tesam - WDD 131</p>
+        <p>
+          <a href="site-plan.html">Site Plan</a>
+        </p>
+        <div class="social">
+          <a><img src="images/instagram-icon.png" alt="instagram" /></a>
+          <a><img src="images/facebook-icon.img" alt="facebook" /></a>
+          <a><img src="images/youtube-icon.img" alt="youtube" /></a>
+        </div>
+      </footer>
     </div>
-</body>
+    <script src="scripts/script.js"></script>
+  </body>
 </html>
