--- a/crochet-corner/patterns.html
+++ b/crochet-corner/patterns.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="description" content="Amigurumi crochet patterns.">
-    <meta name="author" content="Natalie Tesam">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="description" content="Amigurumi crochet patterns." />
+    <meta name="author" content="Natalie Tesam" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crochet Corner - Patterns</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="content">
-        <header>
-            <img class="logo" alt="logo" src="images\crochet-corner-logo.png"
-        />
+      <header>
+        <img class="logo" alt="logo" src="images\crochet-corner-logo.png" />
         <ul class="navigation">
           <li><a href="index.html">Home</a></li>
           <li><a href="patterns.html">Patterns</a></li>
           <li><a href="contact.html">Contact Me</a></li>
           <li><a href="site-plan.html">Site Plan</a></li>
         </ul>
-        </header>
-        <main>
-
-        </main>
-        <footer>
-
-        </footer>
+      </header>
+      <main>
+        <h2>Experience Level</h2>
+        <select name="Experience" id="experience-select">
+          <option value="all">All</option>
+          <option value="beginner">Beginner</option>
+          <option value="intermediate">Intermediate</option>
+          <option value="hard">Hard</option>
+        </select>
+        <div id="patterns-display-section"></div>
+      </main>
+      <div class="help-section">
+        <h2>Need Help?</h2>
+        <button>Contact Me</button>
+        <p>
+          If you have questions, issues, or problems with any patterns, reach
+          out! I will try to respond in a timely manner.
+        </p>
+      </div>
+      <footer>
+        <h3>Copyright 2024 - Crochet Corner - Crochet Patterns</h3>
+        <p>Natalie Tesam - WDD 131</p>
+        <p>
+          <a href="site-plan.html">Site Plan</a>
+        </p>
+        <div class="social">
+          <a><img src="images/instagram-icon.png" alt="instagram" /></a>
+          <a><img src="images/facebook-icon.img" alt="facebook" /></a>
+          <a><img src="images/youtube-icon.img" alt="youtube" /></a>
+        </div>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
