added crochet corner to links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="mission/index.html">Mission</a"></a></li>
                     <li><a href="coolpics/index.html">Coolpics</a></a></li>
-                    <li><a href="#">Project 3</a></li>
+                    <li><a href="crochet-corner/index.html">Crochet Corner</a></li>
                     <li><a href="#">Project 4</a></li>
                     <li><a href="#">Project 5</a></li>
                 </ul>
