updated hmtl to add footer

--- a/crochet-corner/index.html
+++ b/crochet-corner/index.html
@@ -6,18 +6,20 @@
     <meta name="description" content="Amigurumi crochet patterns home page." />
     <meta name="author" content="Natalie Tesam" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Crochet Corner - Home</title>
+    <link type="text/css" rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <div class="content">
       <header>
         <img class="logo" src="images\crochet-corner-logo.png" alt="logo" />
-        <ul class="navigation">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="patterns.html">Patterns</a></li>
-          <li><a href="contact.html">Contact Me</a></li>
-          <li><a href="site-plan.html">Site Plan</a></li>
-        </ul>
+        <nav class="navigation">
+          <a href="index.html">Home</a>
+          <a href="patterns.html">Patterns</a>
+          <a href="contact.html">Contact Me</a>
+          <a href="site-plan.html">Site Plan</a>
+        </nav>
       </header>
       <main>
         <div id="welcome-section">
@@ -52,8 +54,8 @@
         </p>
         <div class="social">
           <a><img src="images/instagram-icon.png" alt="instagram" /></a>
-          <a><img src="images/facebook-icon.img" alt="facebook" /></a>
-          <a><img src="images/youtube-icon.img" alt="youtube" /></a>
+          <a><img src="images/facebook-icon.png" alt="facebook" /></a>
+          <a><img src="images/youtube-icon.png" alt="youtube" /></a>
         </div>
       </footer>
     </div>
