--- a/crochet-corner/patterns.html
+++ b/crochet-corner/patterns.html
@@ -6,7 +6,9 @@
     <meta name="description" content="Amigurumi crochet patterns." />
     <meta name="author" content="Natalie Tesam" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Crochet Corner - Patterns</title>
+    <link type="text/css" rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <div class="content">
@@ -45,8 +47,8 @@
         </p>
         <div class="social">
           <a><img src="images/instagram-icon.png" alt="instagram" /></a>
-          <a><img src="images/facebook-icon.img" alt="facebook" /></a>
-          <a><img src="images/youtube-icon.img" alt="youtube" /></a>
+          <a><img src="images/facebook-icon.png" alt="facebook" /></a>
+          <a><img src="images/youtube-icon.png" alt="youtube" /></a>
         </div>
       </footer>
     </div>
