made changes to header sections to fit css

--- a/crochet-corner/patterns.html
+++ b/crochet-corner/patterns.html
@@ -13,13 +13,13 @@
   <body>
     <div class="content">
       <header>
-        <img class="logo" alt="logo" src="images\crochet-corner-logo.png" />
-        <ul class="navigation">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="patterns.html">Patterns</a></li>
-          <li><a href="contact.html">Contact Me</a></li>
-          <li><a href="site-plan.html">Site Plan</a></li>
-        </ul>
+        <img class="logo" src="images\crochet-corner-header-logo.png" alt="logo" />
+        <nav class="navigation">
+          <a href="index.html">Home</a>
+          <a href="patterns.html">Patterns</a>
+          <a href="contact.html">Contact Me</a>
+          <a href="site-plan.html">Site Plan</a>
+        </nav>
       </header>
       <main>
         <h2>Experience Level</h2>
