--- a/crochet-corner/index.html
+++ b/crochet-corner/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="content">
       <header>
-        <img class="logo" src="images\crochet-corner-logo.png" alt="logo" />
+        <img class="logo" src="images\crochet-corner-header-logo.png" alt="logo" />
         <nav class="navigation">
           <a href="index.html">Home</a>
           <a href="patterns.html">Patterns</a>
