Changed navigation link and added contact me placeholder page

--- a/crochet-corner/contact-me.html
+++ b/crochet-corner/contact-me.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta name="description" content="Amigurumi crochet patterns home page." />
+    <meta name="description" content="Amigurumi crochet patterns." />
     <meta name="author" content="Natalie Tesam" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Crochet Corner - Home</title>
+    <title>Crochet Corner - Patterns</title>
     <link type="text/css" rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
@@ -22,29 +22,6 @@
         </nav>
       </header>
       <main>
-        <div id="welcome-section">
-          <img class="banner" src="images/placeholder.jpg" alt="banner" />
-          <img class="welcome-image" src="" alt="" />
-          <h2>Welcome</h2>
-          <p>
-            Whether you are an experienced crocheter or are looking to learn, I
-            have patterns for all skill levels. If you have any questions or
-            struggles feel free to contact me!
-          </p>
-        </div>
-        <div id="popular-patterns-section">
-          <h2>Popular Patterns</h2>
-          <p>Here are 3 of our all time favorite patterns.</p>
-          <div id="data-output"></div>
-        </div>
-        <div class="help-section">
-          <h2>Need Help?</h2>
-          <button>Contact Me</button>
-          <p>
-            If you have questions, issues, or problems with any patterns, reach
-            out! I will try to respond in a timely manner.
-          </p>
-        </div>
       </main>
       <footer>
         <h3>Copyright 2024 - Crochet Corner - Crochet Patterns</h3>
@@ -59,6 +36,5 @@
         </div>
       </footer>
     </div>
-    <script src="scripts/script.js"></script>
   </body>
 </html>
