--- a/crochet-corner/patterns.html
+++ b/crochet-corner/patterns.html
@@ -17,7 +17,7 @@
         <nav class="navigation">
           <a href="index.html">Home</a>
           <a href="patterns.html">Patterns</a>
-          <a href="contact.html">Contact Me</a>
+          <a href="contact-me.html">Contact Me</a>
           <a href="site-plan.html">Site Plan</a>
         </nav>
       </header>
@@ -30,8 +30,7 @@
           <option value="hard">Hard</option>
         </select>
         <div id="patterns-display-section"></div>
-      </main>
-      <div class="help-section">
+          <div class="help-section">
         <h2>Need Help?</h2>
         <button>Contact Me</button>
         <p>
@@ -39,6 +38,7 @@
           out! I will try to respond in a timely manner.
         </p>
       </div>
+      </main>
       <footer>
         <h3>Copyright 2024 - Crochet Corner - Crochet Patterns</h3>
         <p>Natalie Tesam - WDD 131</p>
