--- a/crochet-corner/site-plan.html
+++ b/crochet-corner/site-plan.html
@@ -22,7 +22,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="patterns.html">Patterns</a></li>
-				<li><a href="contact.html">Contact Me</a></li>
+				<li><a href="contact-me.html">Contact Me</a></li>
 				<li><a href="site-plan.html">Site Plan</a></li>
 			</ul>
 			<h3>Purpose</h3>
