--- a/crochet-corner/index.html
+++ b/crochet-corner/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Crochet Corner - Home</title>
-    <link type="text/css" rel="stylesheet" href="styles/style.css" />
+    <link type="text/css" rel="stylesheet" href="styles/style2.css" />
   </head>
   <body>
     <div class="content">
@@ -23,8 +23,8 @@
       </header>
       <main>
         <div id="welcome-section">
-          <img class="banner" src="images/placeholder.jpg" alt="banner" />
-          <img class="welcome-image" src="" alt="" />
+          <img class="banner" src="images/spiders.jpg" alt="banner" />
+          <img class="welcome-image" src="images/placeholder.jpg" alt="" />
           <h2>Welcome</h2>
           <p>
             Whether you are an experienced crocheter or are looking to learn, I
