--- a/crochet-corner/index.html
+++ b/crochet-corner/index.html
@@ -35,7 +35,21 @@
         <div id="popular-patterns-section">
           <h2>Popular Patterns</h2>
           <p>Here are 3 of our all time favorite patterns.</p>
-          <div id="data-output"></div>
+          <div id="home-page-pattern-output">
+            <div class="home-page-pattern-card">
+              <img src="images/placeholder.jpg" alt="placeholder">
+              <h3>Pattern Name</h3>
+            </div>
+            <div class="home-page-pattern-card">
+              <img src="images/placeholder.jpg" alt="placeholder">
+              <h3>Pattern Name</h3>
+            </div>
+            <div class="home-page-pattern-card">
+              <img src="images/placeholder.jpg" alt="placeholder">
+              <h3>Pattern Name</h3>
+            </div>
+          </div>
+
         </div>
         <div class="help-section">
           <h2>Need Help?</h2>
