--- a/crochet-corner/patterns.html
+++ b/crochet-corner/patterns.html
@@ -13,7 +13,11 @@
   <body>
     <div class="content">
       <header>
-        <img class="logo" src="images\crochet-corner-header-logo.png" alt="logo" />
+        <img
+          class="logo"
+          src="images\crochet-corner-header-logo.png"
+          alt="logo"
+        />
         <nav class="navigation">
           <a href="index.html">Home</a>
           <a href="patterns.html">Patterns</a>
@@ -22,22 +26,24 @@
         </nav>
       </header>
       <main>
-        <h2>Experience Level</h2>
-        <select name="Experience" id="experience-select">
-          <option value="all">All</option>
-          <option value="beginner">Beginner</option>
-          <option value="intermediate">Intermediate</option>
-          <option value="hard">Hard</option>
-        </select>
+        <div>
+          <h2>Experience Level</h2>
+          <select name="Experience" id="experience-select">
+            <option value="all">All</option>
+            <option value="beginner">Beginner</option>
+            <option value="intermediate">Intermediate</option>
+            <option value="hard">Hard</option>
+          </select>
+        </div>
         <div id="patterns-display-section"></div>
-          <div class="help-section">
-        <h2>Need Help?</h2>
-        <button>Contact Me</button>
-        <p>
-          If you have questions, issues, or problems with any patterns, reach
-          out! I will try to respond in a timely manner.
-        </p>
-      </div>
+        <div class="help-section">
+          <h2>Need Help?</h2>
+          <button>Contact Me</button>
+          <p>
+            If you have questions, issues, or problems with any patterns, reach
+            out! I will try to respond in a timely manner.
+          </p>
+        </div>
       </main>
       <footer>
         <h3>Copyright 2024 - Crochet Corner - Crochet Patterns</h3>
