--- a/crochet-corner/index.html
+++ b/crochet-corner/index.html
@@ -13,7 +13,11 @@
   <body>
     <div class="content">
       <header>
-        <img class="logo" src="images\crochet-corner-header-logo.png" alt="logo" />
+        <img
+          class="logo"
+          src="images\crochet-corner-header-logo.png"
+          alt="logo"
+        />
         <nav class="navigation">
           <a href="index.html">Home</a>
           <a href="patterns.html">Patterns</a>
@@ -37,19 +41,18 @@
           <p>Here are 3 of our all time favorite patterns.</p>
           <div id="home-page-pattern-output">
             <div class="home-page-pattern-card">
-              <img src="images/placeholder.jpg" alt="placeholder">
+              <img src="images/placeholder.jpg" alt="placeholder" />
               <h3>Pattern Name</h3>
             </div>
             <div class="home-page-pattern-card">
-              <img src="images/placeholder.jpg" alt="placeholder">
+              <img src="images/placeholder.jpg" alt="placeholder" />
               <h3>Pattern Name</h3>
             </div>
             <div class="home-page-pattern-card">
-              <img src="images/placeholder.jpg" alt="placeholder">
+              <img src="images/placeholder.jpg" alt="placeholder" />
               <h3>Pattern Name</h3>
             </div>
           </div>
-
         </div>
         <div class="help-section">
           <h2>Need Help?</h2>
