Styled patterns page

--- a/crochet-corner/patterns.html
+++ b/crochet-corner/patterns.html
@@ -26,7 +26,7 @@
         </nav>
       </header>
       <main>
-        <div>
+        <div id="patterns-section">
           <h2>Experience Level</h2>
           <select name="Experience" id="experience-select">
             <option value="all">All</option>
@@ -34,8 +34,24 @@
             <option value="intermediate">Intermediate</option>
             <option value="hard">Hard</option>
           </select>
+          <div id="patterns-section-output">
+            <div class="pattern-card">
+              <img src="images/chickens.jpg" alt="placeholder" />
+              <h3>Name</h3>
+              <p>Difficulty</p>
+            </div>
+            <div class="pattern-card">
+              <img src="images/chickens.jpg" alt="placeholder" />
+              <h3>Name</h3>
+              <p>Difficulty</p>
+            </div>
+            <div class="pattern-card">
+              <img src="images/chickens.jpg" alt="placeholder" />
+              <h3>Name</h3>
+              <p>Difficulty</p>
+            </div>
+          </div>
         </div>
-        <div id="patterns-display-section"></div>
         <div class="help-section">
           <h2>Need Help?</h2>
           <button>Contact Me</button>
