Added working links to socials and contact button

--- a/crochet-corner/patterns.html
+++ b/crochet-corner/patterns.html
@@ -54,7 +54,7 @@
         </div>
         <div class="help-section">
           <h2>Need Help?</h2>
-          <button>Contact Me</button>
+          <a href="contact-me.html"><button>Contact Me</button></a>
           <p>
             If you have questions, issues, or problems with any patterns, reach
             out! I will try to respond in a timely manner.
@@ -68,9 +68,9 @@
           <a href="site-plan.html">Site Plan</a>
         </p>
         <div class="social">
-          <a><img src="images/instagram-icon.png" alt="instagram" /></a>
-          <a><img src="images/facebook-icon.png" alt="facebook" /></a>
-          <a><img src="images/youtube-icon.png" alt="youtube" /></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram-icon.png" alt="instagram" /></a>
+          <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-icon.png" alt="facebook" /></a>
+          <a href="https://www.youtube.com/" target="_blank"><img src="images/youtube-icon.png" alt="youtube" /></a>
         </div>
       </footer>
     </div>
