popular patterns link to patterns page on click

--- a/crochet-corner/index.html
+++ b/crochet-corner/index.html
@@ -40,18 +40,24 @@
           <h2>Popular Patterns</h2>
           <p>Here are 3 of our all time favorite patterns.</p>
           <div id="home-page-pattern-output">
-            <div class="home-page-pattern-card">
-              <img src="images/placeholder.jpg" alt="placeholder" />
-              <h3>Pattern Name</h3>
-            </div>
-            <div class="home-page-pattern-card">
-              <img src="images/placeholder.jpg" alt="placeholder" />
-              <h3>Pattern Name</h3>
-            </div>
-            <div class="home-page-pattern-card">
-              <img src="images/placeholder.jpg" alt="placeholder" />
-              <h3>Pattern Name</h3>
-            </div>
+            <a href="patterns.html">
+              <div class="home-page-pattern-card">
+                <img src="images/placeholder.jpg" alt="placeholder" />
+                <h3>Pattern Name</h3>
+              </div>
+            </a>
+            <a href="patterns.html">
+              <div class="home-page-pattern-card">
+                <img src="images/placeholder.jpg" alt="placeholder" />
+                <h3>Pattern Name</h3>
+              </div>
+            </a>
+            <a href="patterns.html">
+              <div class="home-page-pattern-card">
+                <img src="images/placeholder.jpg" alt="placeholder" />
+                <h3>Pattern Name</h3>
+              </div>
+            </a>
           </div>
         </div>
         <div class="help-section">
@@ -70,9 +76,15 @@
           <a href="site-plan.html">Site Plan</a>
         </p>
         <div class="social">
-          <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram-icon.png" alt="instagram" /></a>
-          <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-icon.png" alt="facebook" /></a>
-          <a href="https://www.youtube.com/" target="_blank"><img src="images/youtube-icon.png" alt="youtube" /></a>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><img src="images/instagram-icon.png" alt="instagram"
+          /></a>
+          <a href="https://www.facebook.com/" target="_blank"
+            ><img src="images/facebook-icon.png" alt="facebook"
+          /></a>
+          <a href="https://www.youtube.com/" target="_blank"
+            ><img src="images/youtube-icon.png" alt="youtube"
+          /></a>
         </div>
       </footer>
     </div>
