--- a/crochet-corner/index.html
+++ b/crochet-corner/index.html
@@ -88,6 +88,7 @@
         </div>
       </footer>
     </div>
-    <script src="scripts/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="scripts/script.js" ></script>
   </body>
 </html>
