--- a/crochet-corner/patterns.html
+++ b/crochet-corner/patterns.html
@@ -74,6 +74,7 @@
         </div>
       </footer>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="scripts/script.js"></script>
   </body>
 </html>
